Implement standart param transfering by object property (webpack 2.0 requirement)

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Jeff Ling <jeff@bench.co>",
   "license": "ISC",
   "dependencies": {
+    "loader-utils": "^0.2.15",
     "namespace-css": "git://github.com/jeffling/namespace-css"
   }
 }
